--- a/Crayon.Cloud.Sales.Integration/Crayon.Cloud.Sales.Integration.csproj
+++ b/Crayon.Cloud.Sales.Integration/Crayon.Cloud.Sales.Integration.csproj
@@ -8,11 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Crayon.Cloud.Sales.Domain\Crayon.Cloud.Sales.Domain.csproj" />
+    <ProjectReference Include="..\Crayon.Cloud.Sales.Shared\Crayon.Cloud.Sales.Shared.csproj" />
   </ItemGroup>
 
 </Project>
