--- a/Crayon.Cloud.Sales.Application/Crayon.Cloud.Sales.Application.csproj
+++ b/Crayon.Cloud.Sales.Application/Crayon.Cloud.Sales.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Crayon.Cloud.Sales.Integration\Crayon.Cloud.Sales.Integration.csproj" />
     <ProjectReference Include="..\Crayon.Cloud.Sales.Shared\Crayon.Cloud.Sales.Shared.csproj" />
   </ItemGroup>
