--- a/Crayon.Cloud.Sales.Integration/Crayon.Cloud.Sales.Integration.csproj
+++ b/Crayon.Cloud.Sales.Integration/Crayon.Cloud.Sales.Integration.csproj
@@ -14,6 +14,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
