Implemented data validation.

--- a/Crayon.Cloud.Sales.Shared/Crayon.Cloud.Sales.Shared.csproj
+++ b/Crayon.Cloud.Sales.Shared/Crayon.Cloud.Sales.Shared.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Crayon.Cloud.Sales.Domain\Crayon.Cloud.Sales.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
