--- a/Crayon.Cloud.Sales.WebAPI/appsettings.json
+++ b/Crayon.Cloud.Sales.WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=CrayonCloudSales;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=CrayonCloudSales;Trusted_Connection=True; Connection Timeout = 120"
   }
 }
